@@ -261,9 +261,8 @@ class Smarty extends Smarty_Internal_TemplateBase {
 	/**
 	 * Initialize new Smarty object
 	 *
-	 * @param array $options options to set during initialization, e.g. array( 'forceCompile' => false )
 	 */
-	public function __construct(array $options=array())
+	public function __construct()
 	{
 		// selfpointer need by some other class methods
 		$this->smarty = $this;
@@ -280,14 +279,6 @@ class Smarty extends Smarty_Internal_TemplateBase {
 		$this->debug_tpl = 'file:' . dirname(__FILE__) . '/debug.tpl';
 		if (isset($_SERVER['SCRIPT_NAME'])) {
 			$this->assignGlobal('SCRIPT_NAME', $_SERVER['SCRIPT_NAME']);
-		}
-		// set specified properties
-		foreach ($options as $k => $v) {
-		    $method = 'set' . ucfirst($k);
-		    if (!is_callable($this, $method)) {
-		        throw new SmartyException("Unknown property '{$k}'");
-		    }
-		    $this->$method($v);
 		}
 	}
 
@@ -1003,348 +994,6 @@ class Smarty extends Smarty_Internal_TemplateBase {
 		return Smarty_Internal_Utility::testInstall($this);
     }
 
-
-    /*
-        these attributes are not accessible via setOption() at the moment:
-
-        ## per template ##
-            // cache_id
-            public $cache_id = null;
-            // compile_id
-            public $compile_id = null;
-
-
-        ## internal stuff ##
-            public $template_functions = array();
-            // internal config properties
-            public $properties = array();
-            // cached template objects
-            public $template_objects = null;
-            // registered plugins
-            public $registered_plugins = array();
-            // registered objects
-            public $registered_objects = array();
-            // registered classes
-            public $registered_classes = array();
-            // registered filters
-            public $registered_filters = array();
-            // registered resources
-            public $registered_resources = array();
-            // registered cache resources
-            public $registered_cache_resources = array();
-            // start time for execution time calculation
-            public $start_time = 0;
-
-            // global internal smarty  vars
-            static $_smarty_vars = array();
-            // start time for execution time calculation
-            public $start_time = 0;
-            // block tag hierarchy
-            public $_tag_stack = array();
-
-            // compiler BC
-            public $_current_file = null;
-    */
-
-    /**
-     * Set configuration option
-     *
-     * @param string|array $name option's name to set, or list of options as array( 'name' => 'value' )
-     * @param mixed $value option's new value
-     * @return Smarty current Smarty instance for chaining
-     * @throws SmartyException if option is unknown or the specified value could not be accepted
-     */
-    public function setOption($name, $value=null)
-    {
-        if (!is_array($name)) {
-            $name = array($name => $value);
-        }
-
-        foreach ($name as $k => $v) {
-            switch ($k) {
-                // template directory
-                case 'template_dir':
-                    $this->setTemplateDir($v);
-                    break;
-
-                // compile directory
-                case 'compile_dir':
-                    $this->setCompileDir($v);
-                    break;
-
-                // plugins directory
-                case 'plugins_dir':
-                    $this->setPluginsDir($v);
-                    break;
-
-                // cache directory
-                case 'cache_dir':
-                    $this->setCacheDir($v);
-                    break;
-
-                // config directory
-                case 'config_dir':
-                    $this->setConfigDir($v);
-                    break;
-
-                // default modifiers
-                case 'default_modifiers':
-                    $this->setDefaultModifiers($v);
-                    break;
-
-                // autoload filters
-                case 'autoload_filters':
-                    $this->setAutoloadFilters($v);
-                    break;
-
-
-                // security
-                case 'security_profile':
-                    if ($v === false) {
-                        $this->disableSecurity();
-                    } else {
-                        $this->enableSecurity($v);
-                    }
-                    break;
-
-
-                // security
-                case 'php_handling':
-                    $v = (int) $v;
-                    if ($v < 0 || $v > 3) {
-                        throw new SmartyException("{$k} must be one of [PHP_PASSTRHU, PHP_QUOTE, PHP_REMOVE, PHP_ALLOW]");
-                    }
-
-                    $this->$k = $v;
-                    break;
-
-
-                // auto literal on delimiters with whitspace
-                case 'auto_literal':
-                // display error on not assigned variables
-                case 'error_unassigned':
-                // look up relative filepaths in include_path
-                case 'use_include_path':
-                // force template compiling?
-                case 'force_compile':
-                // check template for modifications?
-                case 'compile_check':
-                // locking concurrent compiles
-                case 'compile_locking':
-                // use sub dirs for compiled/cached files?
-                case 'use_sub_dirs':
-                // compile_error?
-                case 'compile_error':
-                // caching enabled
-                case 'caching':
-                // merge compiled includes
-                case 'merge_compiled_includes':
-                // force cache file creation
-                case 'force_cache':
-                // security
-                case 'direct_access_security':
-                // debug mode
-                case 'debugging':
-                // config var settings
-                case 'config_overwrite':
-                case 'config_booleanize':
-                case 'config_read_hidden':
-                // check If-Modified-Since headers
-                case 'cache_modified_check':
-                case 'variable_filter':
-                    $this->$k = (bool) $v;
-                    break;
-
-
-                // cache lifetime
-                case 'cache_lifetime':
-                // default file permissions
-                case '_file_perms':
-                // default dir permissions
-                case '_dir_perms':
-                    $this->$k = (int) $v;
-                    break;
-
-
-                case 'plugin_search_order':
-                    $this->$k = (array) $v;
-                    break;
-
-
-                case 'error_reporting':
-                    $this->$k = $v === null ? null : (int) $v;
-                    break;
-
-
-                // template delimiters
-                case 'left_delimiter':
-                case 'right_delimiter':
-                // debug mode
-                case 'debugging_ctrl':
-                case 'smarty_debug_id':
-                case 'debug_tpl':
-                // resource type used if none given
-                case 'default_resource_type':
-                // caching type
-                case 'caching_type':
-                // config type
-                case 'default_config_type':
-                // security
-                case 'security_class':
-                    $this->$k = (string) $v;
-                    break;
-
-
-                // default template handler
-                case 'default_template_handler_func':
-                // default config handler
-                case 'default_config_handler_func':
-                // default plugin handler
-                case 'default_plugin_handler_func':
-                    if (!is_callable($v)) {
-                        throw new SmartyException("{$k} is not callable");
-                    }
-
-                    $this->$k = (bool) $v;
-                    break;
-
-                default:
-                    throw new SmartyException("Unknown Option '{$k}'");
-            }
-        }
-
-        return $this;
-    }
-
-    /**
-     * Get configuration option
-     *
-     * @param string|array $name option's name to get
-     * @return mixed value if $name was a single option, array of values if $name was a list of options
-     * @throws SmartyException if option is unknown
-     */
-    public function getOption($name)
-    {
-        $t = array();
-
-        foreach ((array) $name as $k) {
-            switch ($k) {
-                // template directory
-                case 'template_dir':
-                    $v = $this->getTemplateDir();
-                    break;
-
-                // compile directory
-                case 'compile_dir':
-                    $v = $this->getCompileDir();
-                    break;
-
-                // plugins directory
-                case 'plugins_dir':
-                    $v = $this->getPluginsDir();
-                    break;
-
-                // cache directory
-                case 'cache_dir':
-                    $v = $this->getCacheDir();
-                    break;
-
-                // config directory
-                case 'config_dir':
-                    $v = $this->getConfigDir();
-                    break;
-
-                // default modifiers
-                case 'default_modifiers':
-                    $v = $this->getDefaultModifiers();
-                    break;
-
-                // autoload filters
-                case 'autoload_filters':
-                    $v = $this->getAutoloadFilters();
-                    break;
-
-
-                // security
-                case 'security_profile':
-                case 'php_handling':
-                // auto literal on delimiters with whitspace
-                case 'auto_literal':
-                // display error on not assigned variables
-                case 'error_unassigned':
-                // look up relative filepaths in include_path
-                case 'use_include_path':
-                // force template compiling?
-                case 'force_compile':
-                // check template for modifications?
-                case 'compile_check':
-                // locking concurrent compiles
-                case 'compile_locking':
-                // use sub dirs for compiled/cached files?
-                case 'use_sub_dirs':
-                // compile_error?
-                case 'compile_error':
-                // caching enabled
-                case 'caching':
-                // merge compiled includes
-                case 'merge_compiled_includes':
-                // force cache file creation
-                case 'force_cache':
-                // security
-                case 'direct_access_security':
-                // debug mode
-                case 'debugging':
-                // config var settings
-                case 'config_overwrite':
-                case 'config_booleanize':
-                case 'config_read_hidden':
-                // check If-Modified-Since headers
-                case 'cache_modified_check':
-                case 'variable_filter':
-                // cache lifetime
-                case 'cache_lifetime':
-                // default file permissions
-                case '_file_perms':
-                // default dir permissions
-                case '_dir_perms':
-                case 'plugin_search_order':
-                case 'error_reporting':
-                // template delimiters
-                case 'left_delimiter':
-                case 'right_delimiter':
-                // debug mode
-                case 'debugging_ctrl':
-                case 'smarty_debug_id':
-                case 'debug_tpl':
-                // resource type used if none given
-                case 'default_resource_type':
-                // caching type
-                case 'caching_type':
-                // config type
-                case 'default_config_type':
-                // security
-                case 'security_class':
-                // default template handler
-                case 'default_template_handler_func':
-                // default config handler
-                case 'default_config_handler_func':
-                // default plugin handler
-                case 'default_plugin_handler_func':
-                    $v = $this->$k;
-                    break;
-
-                default:
-                    throw new SmartyException("Unknown Option '{$k}'");
-            }
-            if (!is_array($name)) {
-                return $v;
-            } else {
-                $t[$k] = $v;
-            }
-        }
-
-        return $t;
-    }
 }
 
 /**
